fix message on Safari, mobile service

--- a/poranna/src/styles.css
+++ b/poranna/src/styles.css
@@ -1,26 +1,29 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css"; /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body {
+    height: 100%;
+}
+
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: lightyellow;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: lightyellow;
 }
 
 a {
-  color: chocolate;
+    color: chocolate;
 }
 
 .text-bold {
-  font-weight: bold;
-  color: darkorange;
+    font-weight: bold;
+    color: darkorange;
 }
 
 .header {
-  margin: 15px;
-  color: chocolate;
-  border: dashed darkorange 1px;
-  padding: 15px;
+    margin: 15px;
+    color: chocolate;
+    border: dashed darkorange 1px;
+    padding: 15px;
 }
 
 .header-text {
@@ -28,78 +31,79 @@ a {
 }
 
 .header-logo {
-  position: relative;
-  margin: auto;
-  width: 70%
+    position: relative;
+    margin: auto;
+    width: 70%
 }
 
 .menu-container {
-  color: white;
-  text-align: center;
+    color: white;
+    text-align: center;
 }
 
 .panel {
-  margin: 15px;
-  color: chocolate;
-  border: dashed darkorange 1px;
-  padding: 15px;
-  text-align: center;
+    margin: 15px;
+    color: chocolate;
+    border: dashed darkorange 1px;
+    padding: 15px;
+    text-align: center;
 }
 
 .panel-left-aligned {
-  margin: 15px;
-  color: chocolate;
-  border: dashed darkorange 1px;
-  padding: 15px;
-  text-align: left;
+    margin: 15px;
+    color: chocolate;
+    border: dashed darkorange 1px;
+    padding: 15px;
+    text-align: left;
 }
 
 .main-picture {
-  height: 30%;
-  width: 40%;
-  margin-right: 5px;
+    height: 30%;
+    width: 40%;
+    margin-right: 5px;
 }
 
 .message {
-  margin: 15px;
-  color: white;
-  background-color: red;
-  border: dashed darkorange 1px;
-  padding: 15px;
-  text-align: center;
+    margin: 15px;
+    color: white;
+    background-color: darkorange;
+    border: dashed darkorange 1px;
+    padding: 15px;
+    text-align: center;
+}
+
+.hidden-message {
+    display: none;
 }
 
 .mat-icon {
-  vertical-align: bottom;
-  padding-right: 5px;
+    vertical-align: bottom;
+    padding-right: 5px;
 }
 
 .mat-button {
-  background-color: lightyellow;
-  color: chocolate;
-  margin-right: 10px !important;
-  margin-bottom: 10px !important;
+    background-color: lightyellow;
+    color: chocolate;
+    margin-right: 10px !important;
+    margin-bottom: 10px !important;
 }
 
 .button-large {
-  font-size: large;
-  font-weight: bold;
-  width: max-content;
+    font-size: large;
+    font-weight: bold;
+    width: max-content;
 }
 
 .mat-button:hover {
-  background-color: darkorange;
-  color: white;
-  margin-right: 10px !important;
-  margin-bottom: 10px !important;
+    background-color: darkorange;
+    color: white;
+    margin-right: 10px !important;
+    margin-bottom: 10px !important;
 }
 
 .mat-button-selected {
-  background-color: darkorange;
-  color: white;
-  margin-right: 10px !important;
-  margin-bottom: 10px !important;
+    background-color: darkorange;
+    color: white;
+    margin-right: 10px !important;
+    margin-bottom: 10px !important;
 }
-
-
-
